--- a/style.css
+++ b/style.css
@@ -98,6 +98,7 @@ body{
     z-index: 0;
     text-align: center;
     margin-bottom: 300px;
+    box-shadow: 2px 2px 5px rgba(57, 57, 57, 0.53);
 }
 
 .pin{
@@ -109,6 +110,7 @@ body{
     margin-top: -30px;
     margin-left: 105px;
     background-color: #e3a064;
+    box-shadow: 2px 2px 10px rgba(57, 57, 57, 0.53);
 }
 
 .polaroid{
@@ -120,6 +122,7 @@ body{
     width: 190px;
     padding: 10px;
     padding-top: 15px;
+    box-shadow: 2px 2px 15px rgba(57, 57, 57, 0.53);
 }
 
 .thumbnail{
