--- a/style.css
+++ b/style.css
@@ -1,31 +1,31 @@
 @font-face{
     font-family:Bebas Neue;
-    src: url('BebasNeue.otf');
+    src: url('media/BebasNeue.otf');
 }
 
 @font-face{
     font-family:Aaargh;
-    src: url('Aaargh.ttf');
+    src: url('media/Aaargh.ttf');
 }
 
 @font-face{
     font-family:Poetsen One;
-    src: url('PoetsenOne-Regular.ttf');
+    src: url('media/PoetsenOne-Regular.ttf');
 }
 
 @font-face{
     font-family:Caviar Dreams;
-    src: url('CaviarDreams.ttf');
+    src: url('media/CaviarDreams.ttf');
 }
 
 @font-face{
     font-family:Young;
-    src: url('Young.ttf');
+    src: url('media/Young.ttf');
 }
 
 @font-face{
     font-family:Roboto Light;
-    src: url('Roboto-Light_0.ttf');
+    src: url('media/Roboto-Light_0.ttf');
 }
 
 body{
@@ -82,6 +82,7 @@ body{
 
 .acc{
     color: white;
+    margin: 10px;
 }
 
 .acc:hover{
@@ -97,7 +98,7 @@ body{
     width: fill;
     z-index: 0;
     text-align: center;
-    margin-bottom: 300px;
+    margin-bottom: 320px;
     box-shadow: 2px 2px 5px rgba(57, 57, 57, 0.53);
 }
 
@@ -106,14 +107,34 @@ body{
     display: inline-block;
     z-index: 1;
     width: 25px;
-    height: 70px;
-    margin-top: -30px;
+    height: 90px;
+    margin-top: -50px;
     margin-left: 105px;
-    background-color: #e3a064;
+    background-color: #f4c9a3;
     box-shadow: 2px 2px 10px rgba(57, 57, 57, 0.53);
 }
 
+.groove{
+    position: relative;
+    width: inherit;
+    height: 10px;
+    background-color: #eab688;
+    top: 60px;
+    text-align: center;
+}
+
+.metal{
+    position: relative;
+    margin: 0 auto;
+    width: inherit;
+    height: 3px;
+    background-color: lightgrey;
+    top: 3px;
+    box-shadow: 2px 2px 5px rgba(105, 105, 105, 0.43);
+}
+
 .polaroid{
+    position: relative;
     margin: 10px;
     margin-top: 15px;
     display: inline-block;
@@ -123,6 +144,13 @@ body{
     padding: 10px;
     padding-top: 15px;
     box-shadow: 2px 2px 15px rgba(57, 57, 57, 0.53);
+    transform: all 0.3s ease-in;
+}
+
+.polaroid:hover{
+    transform: scale(1.1);
+    transform: all 0.3s ease-in;
+    z-index: 20;
 }
 
 .thumbnail{
