--- a/style.css
+++ b/style.css
@@ -87,7 +87,9 @@ body{
 }
 
 .links{
-    float: right;
+    position:absolute;
+    display: inline-block;
+    right: 10px;
     margin: 10px;
     margin-right: 50px;
     color: white;
