--- a/style.css
+++ b/style.css
@@ -169,13 +169,14 @@ body{
     position: relative;
     display: none;
     background-color: white;
-    width: 190px;
     padding: 10px;
     padding-top: 15px;
     box-shadow: 2px 2px 15px rgba(57, 57, 57, 0.53);
     transform: all 0.3s ease-in;
     direction: rtl;
     border-radius: 2px;
+    text-align: center;
+    margin: 10px;
 }
 
 input{
@@ -184,6 +185,18 @@ input{
     border-style: solid;
     border-width: thin;
     border-color: lightgrey;
-    padding: 10px;
+    padding: 5px;
+    padding-left: 20px;
     margin: 5px;
+}
+
+.input-box{
+    margin: 10px;
+    border-style: solid;
+    border-width: thin;
+    border-color: lightgrey;
+    border-radius: 10px;
+    padding: 5px;
+    width: 100px;
+    background-color: rgb(230, 236, 240);
 }
