--- a/style.css
+++ b/style.css
@@ -49,6 +49,55 @@ body{
     padding: 10px;
 }
 
+.modal{
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 50; /* Sit on top */
+    padding-top: 0;
+    left: 0;
+    top: 70px;      /*Size of the nav bar*/
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: none; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
+}
+
+.close {
+    position: absolute;
+    top: 15px;
+    right: 35px;
+    color: #f1f1f1;
+    font-size: 40px;
+    font-weight: bold;
+    transition: 0.3s;
+}
+
+.close:hover, .close:focus {
+    color: #bbb;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.caption{
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-width: 600px;
+    text-align: center;
+    color: #ccc;
+    padding: 10px 0;
+    height: 150px;
+}
+
+.photo {
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-width: 600px;
+    background-color:antiquewhite;
+}
+
 .searchbar{
     margin: 0 auto;
     margin-top: 5px;
@@ -163,6 +212,11 @@ body{
     height: 170px;
 }
 
+.thumbnail img{
+    vertical-align: top;
+    width: 100%; /* max width */
+    opacity: 1;  /* make it transparent */
+}
 @keyframes zoom {
     from{transform: scale(0)}
     to {transform: scale(1)}
