i give up this did nothing

--- a/style.css
+++ b/style.css
@@ -77,15 +77,15 @@ a{
 .modal{
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
-    z-index: 100; /* Sit on top */
+    z-index: 11; /* Sit on top */
     padding-top: 0;
     left: 0;
     top: 0px;      /*Size of the nav bar*/
     width: 100%; /* Full width */
     height: 100%; /* Full height */
-    overflow: none; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
+    overflow: hidden; 
 }
 
 .close {
