--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ body{
 /*    overflow: auto;*/
 }
 
-.noscroll { 
+.noscroll {
   overflow: hidden;
 }
 
@@ -56,8 +56,8 @@ body{
     position: fixed;
     width: 100%;
     height: 100px;
-    z-index:10;
-    padding: 10px;
+    z-index:100;
+/*    padding: 10px;*/
     text-align: center;
 }
 
@@ -133,7 +133,7 @@ a{
 
 .searchbar{
     position: fixed;
-    z-index: 11;
+    z-index: 101;
     margin: 0 auto;
     margin-top: 10px;
     margin-left: 20px;
@@ -181,11 +181,11 @@ a{
 }
 
 .string{
-    position: relative;
+/*    position: relative;*/
     top: 150px;
     background-color: #e1b07e;
     height: 5px;
-    width: fill;
+    width: 100%;
     z-index: 0;
     text-align: center;
     margin-bottom: 320px;
