no more auto scroll up lol

--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ body{
 /*
   overflow: hidden;
 */
-    position: fixed; overflow-y:scroll
+    position: absolute; overflow-y:scroll
 }
 
 #navbar{
