slider (switch view)

--- a/style.css
+++ b/style.css
@@ -42,6 +42,8 @@ body{
     font-family:Roboto Light;
     /*     font-family: Young;*/
     font-size: 1em;
+    white-space: nowrap;
+/*    overflow-x: hidden;*/
 }
 
 .noscroll {
@@ -297,8 +299,13 @@ button:active{
     animation-direction: normal;
 }
 
-.feed{
-    padding-top: 200px;   
+.feed, .sharedFeed{
+    white-space: normal;
+    padding-top: 200px;
+}
+
+.sharedFeed{
+    display   : none;
 }
 
 input{
