--- a/style.css
+++ b/style.css
@@ -395,7 +395,7 @@ button{
 
 .tag-overlay{
     position: absolute;
-    top: 0px;
+    bottom: 0px;
     right: 0px;
     background-color: rgba(0, 0, 0, 0.27);
     color: white;
