moved tagged users

--- a/style.css
+++ b/style.css
@@ -437,16 +437,17 @@ button{
     font-size: 18px;
 }
 
-#edittags{
+.edittags{
     position: fixed;
     z-index: 110;
-    margin: 0 auto;
+/*    margin: 0 auto;*/
     background-color: white;
-    width: 20%;
+/*    width: 20%;*/
     height: auto;
-    top: 200px;
+/*    top: 200px;
     left: 40%;
-    padding: 20px;
+    padding: 20px;*/
+    bottom: 80px;
     border-radius: 5px;
     display: none;
     text-align: right;
@@ -459,45 +460,49 @@ button{
     box-shadow: 2px 2px 15px rgba(57, 57, 57, 0.53);
 }
 
-#taggedusers{
+.taggedusers{
     padding: 10px;
+    padding-left: 30px;
     font-size: 15px;
     direction: ltr;
     text-align: left;
+    max-height: 80px;
 }
 
-#taguser{
-    width: 95%;
+.taguser{
+/*    width: 95%;*/
     background-color: #e6e6e6;
 }
 
-#taguser:focus{
+.taguser:focus{
     outline: none;
     background-color: white;
 }
 
-#username{
+.username{
     color: #005377;
     font-weight: bold;
 }
 
-#username:hover{
+.username:hover{
     color: grey;
     font-weight: bold;
 }
 
 .exit{
+    color: darkslateblue;
     margin: 0;
     padding: 0;
-    padding-bottom: 5px;
+    padding-right: 10px;
+/*    padding-bottom: 5px;*/
     text-align: right;
     direction: rtl;
     width: 100%;
+    cursor: pointer;
 }
 
-#exit{
+/*#exit{
     margin: 0;
     margin-top: -5px;
-    cursor: pointer;
     width: 15px;
-}
+}*/
