--- a/style.css
+++ b/style.css
@@ -267,6 +267,7 @@ button:active{
     background-color: darkslategrey;
     width: 180px;
     height: 170px;
+    cursor: pointer;
 }
 
 .thumbnail img{
@@ -536,6 +537,17 @@ button{
 }
 
 #username:hover{
+    color: grey;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.username{
+    color: #008bc7;
+    font-weight: bold;
+}
+
+.username:hover{
     color: grey;
     font-weight: bold;
     cursor: pointer;
