--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ button:active{
     overflow: hidden;
 }
 
-.close {
+.modal-close {
     position: absolute;
     top: 100px;
     right: 35px;
@@ -115,7 +115,7 @@ button:active{
     transition: 0.3s;
 }
 
-.close:hover, .close:focus {
+.modal-close:hover, .modal-close:focus {
     color: #bbb;
     text-decoration: none;
     cursor: pointer;
