--- a/taggle.css
+++ b/taggle.css
@@ -85,7 +85,10 @@ html {
   display: none;
   border: 0;
   background: none;
-  cursor: pointer; }
+  cursor: pointer;
+  width: 10px;
+  margin: 0px;
+  margin-left: 10px;}
 
 .taggle_list .taggle:hover {
 /*  padding: 5px;*/
