--- a/taggle.css
+++ b/taggle.css
@@ -56,7 +56,7 @@ html {
 
 .taggle_list .taggle {
   margin-right: 8px;
-  background: #E2E1DF;
+  background: rgba(45, 174, 229, 0.5);
   padding: 5px 10px;
   border-radius: 3px;
   position: relative;
@@ -98,7 +98,7 @@ html {
 */
 /*    padding-top: 0;*/
     height: 1.1rem;
-  background: #ccc;
+  background: rgba(0, 139, 199, 0.70);
   transition: all .3s; 
 }
 
