--- a/taggle.css
+++ b/taggle.css
@@ -145,7 +145,9 @@ textarea.input,
   transition: all .25s;
   cursor: text;
   margin-bottom: 10px;
-  position: relative; }
+  position: relative; 
+    
+}
 
 .textarea.input:focus,
 .textarea.input.active,
@@ -165,17 +167,25 @@ textarea.input {
   box-sizing: content-box; }
 
 .placeholder_input {
-  position: relative; }
+  position: relative; 
+    height: 100%;
+}
 
 .placeholder_input span {
   position: absolute;
   color: #AAA;
   top: 50%;
   margin-top: -11px;
-  left: 10px; }
+  left: 10px; 
+}
 
 .placeholder_input input {
-  width: 120px; }
+  width: 120px; 
+}
+
+.editable-tags{
+    display: none;
+}
 
 .ui-autocomplete {
   position: absolute;
