--- a/taggle.css
+++ b/taggle.css
@@ -118,10 +118,10 @@ html {
   padding: 8px;
   padding-left: 0;
   float: left;
-  margin-top: -5px;
+  /*margin-top: -5px;*/
   background: none;
-  width: 100%;
-  max-width: 100%; 
+  /*width: 100%;*/
+  /*max-width: 100%; */
 }
 
 .taggle_sizer {
@@ -139,8 +139,11 @@ textarea.input,
   background: #FDFDFD;
   box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.2), 0 1px 1px rgba(255, 255, 255, 0.7);
   min-height: 60px;
+  pref-width: 300px;
+  width: 300px;
+  max-width: 300px;
   padding: 8px;
-  border-radius: 3px;
+  /*border-radius: 3px;*/
   color: #555;
   transition: all .25s;
   cursor: text;
@@ -154,7 +157,8 @@ textarea.input,
 textarea.input:focus,
 textarea.input.active {
   background: #fff;
-  transition: all .25s; }
+  transition: all .25s;
+  width: 300px;}
 
 .textarea.input,
 textarea.input {
@@ -199,7 +203,7 @@ textarea.input {
   position: absolute;
   top: 66px;
   background: white;
-  width: 99.5%;
+  /*width: 99.5%;*/
   left: 0.25%;
   z-index: 2; }
 
@@ -215,7 +219,8 @@ textarea.input {
 .ui-autocomplete {
   max-height: 200px;
   overflow: scroll;
-  width: 99% !important; }
+  /*width: 99% !important; */
+}
 
 .custom.textarea {
   border-radius: 0;
